
The Future: Released Refine 1.5.* (requires >= FUN3D-45226 (11.0.0)).

- FAUXGeom cylinder pole direction can be flipped with sign of radius.

Tue Aug 24, 2010: Released Refine 1.5.2 (requires >= FUN3D-45226 (11.0.0)).

- fixed configure

Tue Aug 24, 2010: Released Refine 1.5.1 (requires >= FUN3D-45226 (11.0.0)).

- Changed the parallel node insertion and removal algorithm
    to be more consistant when sweeping through grid.
   (thanks to Rajiv Shenoy and James Cook of GA Tech for suggestion)
- Added refine-convert to convert grid file types.
- Mesh3D (Karman) and Fieldview import
- Elimiated intel version 10 compiler warnings.
- Fixed bug that would 'kink' geometry edges with FAUXGeom.
- GRI import/export dimensionality and element order added to support
    new file format

Fri Mar 26, 2010: Released Refine 1.5.0 (requires >= FUN3D-45226 (11.0.0)).

This minor rev bump is an API change to include unravel.
Added import and export of NGP grids for a DSMC code.

added NGP file import and export for file-based DSMC adaptation

Thu Jan 28, 2010: Released Refine 1.4.3 (requires >= FUN3D-25331 (10.4.0)).

FAUXGeom improved to allow cylindrical surfaces. (still need derivatives)

to repair arbitrary FAUXGeom planes by fixing NaN in 
gridmath.c(gridVectorOrthogonalize) and completing 
FAUXGeom.c(CADGeom_PointOnFace).

Fri Jan 16, 2009: Released Refine 1.4.2 (requires >= FUN3D-25331 (10.4.0)).

FAUXGeom improved to allow arbitrary planes or no faces.

A sensitivity to round-off error from Intel compiler optimizations in
the FUN3D metric construction has been reduced in recent versions of
FUN3D. If problems are reported in anisotropic_adapt_parameter update
FUN3D.

Thu Jan 3, 2008: Released Refine 1.4.1 (requires >= FUN3D-25331 (10.4.0)).

Improved INSTALL. lowered GRID_VOLUME_TOL and GRID_AREA_TOL to 1.0e-40 for
very small domains.

Thu Sep 27, 2007: Released Refine 1.4.0

API change to update ghost frozen state, requires >= FUN3D-25331 (10.4.0).